--- a/src/main/webapp/templates/modelo.xhtml
+++ b/src/main/webapp/templates/modelo.xhtml
@@ -14,7 +14,7 @@
 	<h:outputStylesheet library="css" name="estilos.css" />
 </h:head>
 <h:body>
-	<p:growl id="mensagem" />
+<p:growl id="mensagem" />
 
 	<div id="geral">
 		<div id="topo" class="divTopo">
@@ -24,7 +24,30 @@
 
 		<div id="cabecalho" class="divCabecalho">
 			<h:form id="formMenu">
-				<p:menubar model="#{menuBean.modeloDoMenu}" />
+				<p:menubar>
+					<p:submenu label="Arquivo">
+						<p:menuitem value="Sair" />
+					</p:submenu>
+
+					<p:submenu label="Cadastros"
+						>
+						<p:menuitem value="Estado" url="/pages/estados.xhtml" />
+						<p:menuitem value="Cidade" url="/pages/cidades.xhtml" />
+						<p:menuitem value="Fabricante" />
+						<p:menuitem value="Produto" />
+						<p:menuitem value="Pessoa" />
+						<p:menuitem value="Cliente" />
+						<p:menuitem value="Funcionário" />
+					</p:submenu>
+
+					<p:submenu label="Movimentações">
+						<p:menuitem value="Venda" url="/pages/vendas.xhtml" />
+					</p:submenu>
+
+					<p:submenu label="Ajuda">
+						<p:menuitem value="Sobre" />
+					</p:submenu>
+				</p:menubar>
 			</h:form>
 		</div>
 
