--- a/src/main/webapp/templates/modelo.xhtml
+++ b/src/main/webapp/templates/modelo.xhtml
@@ -29,15 +29,15 @@
 						<p:menuitem value="Sair" />
 					</p:submenu>
 
-					<p:submenu label="Cadastros"
-						>
+					<p:submenu label="Cadastros">
 						<p:menuitem value="Estado" url="/pages/estados.xhtml" />
 						<p:menuitem value="Cidade" url="/pages/cidades.xhtml" />
-						<p:menuitem value="Fabricante" />
-						<p:menuitem value="Produto" />
-						<p:menuitem value="Pessoa" />
-						<p:menuitem value="Cliente" />
-						<p:menuitem value="Funcionário" />
+						<p:menuitem value="Fabricante" url="/pages/fabricantes.xhtml" />
+						<p:menuitem value="Produto" url="/pages/produtos.xhtml"/>
+						<p:menuitem value="Pessoa" url="/pages/pessoas.xhtml" />
+						<p:menuitem value="Cliente" url="/pages/clientes.xhtml" />
+						<p:menuitem value="Funcionário" url="/pages/funcionarios.xhtml" />
+						<p:menuitem value="Usuário" url="/pages/usuarios.xhtml" />
 					</p:submenu>
 
 					<p:submenu label="Movimentações">
