--- a/src/main/webapp/reports/estados.jrxml
+++ b/src/main/webapp/reports/estados.jrxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="estados" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="b73f44ce-edf7-4dc8-9a48-48e1d35c534b">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="estados" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1e1fe700-99a8-41be-8ce6-4ec3be40f7dd">
 	<property name="com.jaspersoft.studio.data.sql.tables">
-		<![CDATA[dGNjLmVzdGFkbyBBUyAsODEsNjksYmJlZjNlMDQtMWQxNy00MjIyLWEyNzQtZGIxOTk2ZDJkNzc3
-Ow==]]>
+		<![CDATA[dGNjLmVzdGFkbyBBUyAsMTIyLDU0LGZjZjJhZGUwLTg1MDItNGVjNi1hZDIzLTFjYzE3MmIwZjM1
+ODs=]]>
 	</property>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="TCC Data Adapter "/>
 	<queryString language="SQL">
 		<![CDATA[SELECT tcc.estado.nome,
 	tcc.estado.sigla
-FROM tcc.estado
-ORDER BY tcc.estado.nome DESC]]>
+FROM tcc.estado]]>
 	</queryString>
 	<field name="nome" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="nome"/>
@@ -20,79 +19,50 @@ ORDER BY tcc.estado.nome DESC]]>
 		<property name="com.jaspersoft.studio.field.label" value="sigla"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="estado"/>
 	</field>
+	<background>
+		<band splitType="Stretch"/>
+	</background>
 	<title>
-		<band height="84" splitType="Stretch">
-			<image hAlign="Center" vAlign="Middle">
-				<reportElement x="80" y="10" width="424" height="64" uuid="2df1957e-5c25-456b-92c0-4d7883b51dfe"/>
-				<imageExpression><![CDATA["src/main/webapp/resources/images/banner.jpg"]]></imageExpression>
-			</image>
-		</band>
+		<band height="79" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch">
+		<band height="42" splitType="Stretch">
 			<staticText>
-				<reportElement x="44" y="0" width="500" height="30" uuid="11d1a026-000f-4afe-aa40-2e21d5b499c8"/>
+				<reportElement x="0" y="12" width="550" height="30" uuid="ef98c19d-f9a3-49a2-8426-f9c949cb375a"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="18" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Relatório de Estados]]></text>
+				<text><![CDATA[Relatório de Estados
+]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="34" splitType="Stretch">
+		<band height="45" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="10" width="100" height="20" uuid="726e5914-85a9-46be-9582-c5b6379f843c">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b3c42e2a-face-4bfb-9531-910b56baa3b1"/>
-				</reportElement>
+				<reportElement x="10" y="15" width="100" height="30" uuid="7c131cfc-f7ae-4502-ad63-20dba45e883e"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Nome]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="285" y="10" width="100" height="20" uuid="776dd73f-2072-40fc-9ed4-43b950b7bb20">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="fd2c127c-a0d1-4667-a9f7-1e2e604eb8c8"/>
-				</reportElement>
-				<textElement verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Sigla]]></text>
+				<text><![CDATA[Nome:
+]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="30" splitType="Stretch">
+		<band height="50" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="170" height="30" uuid="a301592b-d39c-4e78-ade7-3b043dc0483e">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b3c42e2a-face-4bfb-9531-910b56baa3b1"/>
+				<reportElement x="0" y="20" width="100" height="30" uuid="965ca5e1-05de-44ff-9ad8-77cf52f42660">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="52c072fb-cc2c-43c9-b49f-b7334de1b857"/>
 				</reportElement>
-				<textElement verticalAlignment="Middle">
-					<font size="12"/>
-				</textElement>
 				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="284" y="0" width="100" height="30" uuid="2783ad10-e034-4c36-98ff-e574c2f30174">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="fd2c127c-a0d1-4667-a9f7-1e2e604eb8c8"/>
-				</reportElement>
-				<textElement verticalAlignment="Middle">
-					<font size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{sigla}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="48" splitType="Stretch">
+		<band height="54" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="18" width="550" height="30" uuid="3e685edb-83aa-4bcd-b61e-7a07eee2bea8"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
+				<reportElement x="10" y="18" width="540" height="30" uuid="d3d9ae01-50b2-47a3-a831-f4b4cbe78d6d"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
