--- a/src/main/webapp/templates/modelo.xhtml
+++ b/src/main/webapp/templates/modelo.xhtml
@@ -40,7 +40,10 @@
 					</p:submenu>
 
 					<p:submenu label="Movimentações">
+						<p:menuitem value="Historico" url="/pages/historico.xhtml" />
 						<p:menuitem value="Venda" url="/pages/vendas.xhtml" />
+						<p:menuitem value="Caixa" url="/pages/caixa.xhtml" />
+						<p:menuitem value="Lista" url="/pages/vendas1.xhtml" />
 					</p:submenu>
 
 					<p:submenu label="Ajuda">
